chore: fix aot-cache profile